syntax = "proto3";

option java_package = "com.bteshome.keyvaluestore.storage.proto";
option java_multiple_files = true;

message LogPositionProto {
  int32 term = 1;
  int64 index = 2;
}
